[package]
name = "dtf"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["blocking"] }
tempfile = "3.3"
error-chain = "0.12.4"
url = "2.5.2"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"